--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/bjdixon/github-poller#readme",
   "dependencies": {
     "hapi": "^12.1.0",
-    "octonode": "^0.7.4"
+    "octonode": "^0.7.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "jasmine": "^2.4.1"
