--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/bjdixon/github-poller#readme",
   "dependencies": {
     "hapi": "^12.1.0",
+    "hapi-swagger": "^3.3.0",
+    "inert": "^3.2.0",
     "octonode": "^0.7.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "vision": "^4.0.1"
   },
   "devDependencies": {
     "jasmine": "^2.4.1"
